CORE-47200: sign in, register and forgot password page title and password show text alignment issue fixed.

--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/user/_user-title.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/user/_user-title.scss
@@ -104,8 +104,15 @@
 .c-user-password,
 .c-user-register {
   h1 {
-    @include breakpoint($desktop) {
-      top: rem(-88);
+    @include pageTitle;
+  }
+}
+
+.c-user-password {
+  h1 {
+    @include breakpoint($tablet) {
+      margin-top: rem(16);
+      top: rem(-64);
     }
   }
 }
